Add classpath to demo manifest so that it can be run with java -jar

--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -19,6 +19,7 @@
 					<archive>
 						<manifest>
 							<mainClass>org.jgrapht.demo.JGraphAdapterDemo</mainClass>
+                                                        <addClasspath>true</addClasspath>
 						</manifest>
 					</archive>
 				</configuration>
