--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -3,7 +3,7 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.sf.jgrapht</groupId>
+		<groupId>org.jgrapht</groupId>
 		<artifactId>jgrapht</artifactId>
 		<version>0.8.3-SNAPSHOT</version>
 	</parent>
