--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jgrapht-core</artifactId>
 		</dependency>
+        <dependency>
+                <groupId>org.tinyjee.jgraphx</groupId>
+                    <artifactId>jgraphx</artifactId>
+                        <version>2.0.0.1</version>
+                    </dependency>
 		<dependency>
 			<groupId>jgraph</groupId>
 			<artifactId>jgraph</artifactId>
