--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<url>http://jgrapht.sourceforge.net/LGPL.html</url>
 			<distribution>repo</distribution>
 		</license>
+		<license>
+			<name>Eclipse Public License (EPL) 1.0</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
+			<distribution>repo</distribution>
+		</license>
 	</licenses>
 	<scm>
 		<url>https://github.com/jgrapht/jgrapht.git</url>
