--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,16 @@
                       <convention>etc/triemax-jalopy-settings.xml</convention>
                     </configuration>
                 </plugin>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-javadoc-plugin</artifactId>
+                  <version>2.9.1</version>
+                  <configuration>
+                    <exclude>org.jgrapht.experimental</exclude>
+                    <show>protected</show>
+                    <windowtitle>JGraphT : a free Java graph library</windowtitle>
+                  </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
