--- a/jgrapht-touchgraph/pom.xml
+++ b/jgrapht-touchgraph/pom.xml
@@ -36,7 +36,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<finalName>${project.artifactId}-${project.version}-shade</finalName>
+					<finalName>${project.artifactId}-${project.version}-uber</finalName>
 				</configuration>
 			</plugin>
 		</plugins>
