--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>jgrapht</artifactId>
 	<packaging>pom</packaging>
 	<name>JGraphT - Parent</name>
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.9.0</version>
 	<description>A Java class library for graph-theory data structures and algorithms.</description>
 	<url>http://www.jgrapht.org</url>
     <parent>
@@ -29,7 +29,8 @@
 		<url>https://github.com/jgrapht/jgrapht.git</url>
 		<connection>scm:git:git://github.com/jgrapht/jgrapht.git</connection>
 		<developerConnection>scm:git:git@github.com:jgrapht/jgrapht.git</developerConnection>
-	</scm>
+	  <tag>jgrapht-0.9.0</tag>
+  </scm>
 	<issueManagement>
 		<url>http://sourceforge.net/tracker/?group_id=86459</url>
 	</issueManagement>
