--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -39,6 +39,26 @@
                     </archive>
                 </configuration>
             </plugin>
+          <plugin>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <version>2.3.7</version>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>bundle-manifest</id>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>manifest</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <instructions>
+                <Bundle-Vendor>Barak Naveh, John V. Sichi and contributors (see http://sourceforge.net/projects/jgrapht/)</Bundle-Vendor>
+              </instructions>
+            </configuration>
+          </plugin>
         </plugins>
     </build>
 </project>
