Implemented various graph utility methods.
Implementation was inspired by e.g. the following projects:

- https://github.com/apache/storm/blob/d839d1b/storm-core/src/jvm/org/apache/storm/trident/util/TridentUtils.java
- https://github.com/Netflix/Nicobar/blob/84074b5/nicobar-core/src/main/java/com/netflix/nicobar/core/module/GraphUtils.java

--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -35,6 +35,19 @@
 					</execution>
 				</executions>
 				<configuration>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<manifestEntries>
+								<!--
+									Use unique OSGi bundle symbolic name for uber artifact. Otherwise
+									e.g. jgrapht-ext-1.0.0.jar and jgrapht-ext-1.0.0-uber.jar could
+									not be deployed to the same P2 repository.
+								-->
+								<Bundle-SymbolicName>org.jgrapht.ext.uber</Bundle-SymbolicName>
+							</manifestEntries>
+						</transformer>
+					</transformers>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <shadedClassifierName>uber</shadedClassifierName>
                     <!--
