Documentation code and package related cleanups
- Fixed all missing javadoc comments
- Fixed javadoc typos
- Added exclude rule for package.html in jar file (fixes javadoc warning)
- Removed old style $id$ from headers (not needed since git is used)
- Import clenups

--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -61,6 +61,9 @@
 					<archive>
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
 					</archive>
+					<excludes>
+						<exclude>**/package.html</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
