--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: java
 jdk:
   - oraclejdk8
 script:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=false -B -V \
-    && mvn test -B 
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn test -B && mvn javadoc:aggregate
