disabled appending assembly ID

--- a/jgrapht-dist/pom.xml
+++ b/jgrapht-dist/pom.xml
@@ -57,6 +57,7 @@
 							<attach>true</attach>
 							<finalName>jgrapht-${project.version}</finalName>
 							<descriptorSourceDirectory>${basedir}/src/assembly</descriptorSourceDirectory>
+                                                        <appendAssemblyId>false</appendAssemblyId>
 						</configuration>
 					</execution>
 				</executions>
