--- a/jgrapht-dist/pom.xml
+++ b/jgrapht-dist/pom.xml
@@ -48,7 +48,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
-                                                <id>JGraphT</id>
+                                                <id>assembly</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
