--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
+				<artifactId>jgrapht-io</artifactId>
+				<version>${project.version}</version>
+            </dependency>
+            <dependency>
+				<groupId>${project.groupId}</groupId>
 				<artifactId>jgrapht-ext</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -157,6 +162,7 @@
 
 	<modules>
 		<module>jgrapht-core</module>
+		<module>jgrapht-io</module>
 		<module>jgrapht-ext</module>
 		<module>jgrapht-demo</module>
 		<module>jgrapht-dist</module>
