--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -56,6 +56,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>jgrapht-io</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>jgrapht-ext</artifactId>
 		</dependency>
 	</dependencies>
