--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -177,6 +177,10 @@
 			<artifactId>jgrapht-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>jgrapht-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.tinyjee.jgraphx</groupId>
 			<artifactId>jgraphx</artifactId>
 			<version>2.0.0.1</version>
