--- a/jgrapht-dist/pom.xml
+++ b/jgrapht-dist/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jgrapht</groupId>
 		<artifactId>jgrapht</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.1.0</version>
 	</parent>
 	<artifactId>jgrapht-dist</artifactId>
 	<name>JGraphT - Distributable Archives</name>
