--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>xmlunit</groupId>
-				<artifactId>xmlunit</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
+			    <groupId>org.xmlunit</groupId>
+			    <artifactId>xmlunit-core</artifactId>
+			    <version>2.5.1</version>
+			    <scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
