Add Automatic-Module-Name values
This sets the following module names:

  jgrapht-core → org.jgrapht.core
  jgrapht-ext  → org.jgrapht.ext
  jgrapht-io   → org.jgrapht.io

This gives the modules stable names in preparation for possible full
modularization.

Affects #448

--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -79,6 +79,7 @@
 				</executions>
 				<configuration>
 					<instructions>
+						<Automatic-Module-Name>org.jgrapht.core</Automatic-Module-Name>
 						<Bundle-Vendor>Barak Naveh, John V. Sichi and contributors (see
 							http://sourceforge.net/projects/jgrapht/)</Bundle-Vendor>
 					</instructions>
