--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -79,6 +79,7 @@
 				</executions>
 				<configuration>
 					<instructions>
+						<Automatic-Module-Name>org.jgrapht.ext</Automatic-Module-Name>
 						<Bundle-Vendor>Barak Naveh, John V. Sichi and contributors (see
 							http://sourceforge.net/projects/jgrapht/)</Bundle-Vendor>
 						<!-- JGraph (source code at https://github.com/jgraph/legacy-jgraph5.git) 
