Moved snapshot ettings to 'etc' folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jdk:
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn test -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
 after_success:
-  - test $TRAVIS_BRANCH = "master" && mvn deploy -DskipTests=true --settings snapshot-settings.xml
+  - test $TRAVIS_BRANCH = "master" && mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml
