Add Automatic-Module-Name values
This sets the following module names:

  jgrapht-demo       → org.jgrapht.demo
  jgrapht-touchgraph → org.jgrapht.touchgraph

This gives the modules stable names in preparation for possible full
modularization.

Affects #448

--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -32,6 +32,9 @@
 							<mainClass>org.jgrapht.demo.JGraphAdapterDemo</mainClass>
 							<addClasspath>true</addClasspath>
 						</manifest>
+						<manifestEntries>
+							<Automatic-Module-Name>org.jgrapht.demo</Automatic-Module-Name>
+						</manifestEntries>
 					</archive>
 				</configuration>
 			</plugin>
