Delete JGraph dependency. Upgrade JGraphX dependency to 3.4.1.3, and touch up demo. Bring a few release notes up to date.

--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -29,7 +29,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.jgrapht.demo.JGraphAdapterDemo</mainClass>
+							<mainClass>org.jgrapht.demo.JGraphXAdapterDemo</mainClass>
 							<addClasspath>true</addClasspath>
 						</manifest>
 						<manifestEntries>
