Cleanup poms and added license files
 - Clean relative references in poms (added property main.basedir) to refer
   to parent's basedir
 - Added license files for dependencies
 - Added license files inside jar's in META-INF folder (using shade)
 - Added license files in distribution (using assembly)

--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -8,6 +8,9 @@
 	</parent>
 	<artifactId>jgrapht-demo</artifactId>
 	<name>JGraphT - Demo</name>
+	<properties>
+		<main.basedir>${project.parent.basedir}</main.basedir>
+	</properties>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License Version 2.1, February 1999</name>
