--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -8,6 +8,9 @@
 	</parent>
 	<artifactId>jgrapht-ext</artifactId>
 	<name>JGraphT - Ext</name>
+	<properties>
+		<main.basedir>${project.parent.basedir}</main.basedir>
+	</properties>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License Version 2.1, February 1999</name>
@@ -43,6 +46,15 @@
 									to the same P2 repository. -->
 								<Bundle-SymbolicName>org.jgrapht.ext.uber</Bundle-SymbolicName>
 							</manifestEntries>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>META-INF/jgraphx-license</resource>
+							<file>${main.basedir}/etc/licenses/jgraphx-license.txt</file>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">
+                			</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+							<addHeader>false</addHeader>
 						</transformer>
 					</transformers>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
@@ -98,6 +110,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
