--- a/jgrapht-dist/pom.xml
+++ b/jgrapht-dist/pom.xml
@@ -8,6 +8,9 @@
 	<artifactId>jgrapht-dist</artifactId>
 	<name>JGraphT - Distributable Archives</name>
 	<packaging>pom</packaging>
+	<properties>
+		<main.basedir>${project.parent.basedir}</main.basedir>
+	</properties>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License Version 2.1, February 1999</name>
@@ -20,7 +23,6 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
