--- a/jgrapht-io/pom.xml
+++ b/jgrapht-io/pom.xml
@@ -9,6 +9,9 @@
 	</parent>
 	<artifactId>jgrapht-io</artifactId>
 	<name>JGraphT - I/O</name>
+	<properties>
+		<main.basedir>${project.parent.basedir}</main.basedir>
+	</properties>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License Version 2.1, February 1999</name>
@@ -45,6 +48,19 @@
 									to the same P2 repository. -->
 								<Bundle-SymbolicName>org.jgrapht.io.uber</Bundle-SymbolicName>
 							</manifestEntries>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>META-INF/antlr-license</resource>
+							<file>${main.basedir}/etc/licenses/antlr-license.txt</file>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>META-INF/commons-lang3-license</resource>
+							<file>${main.basedir}/etc/licenses/apache-license-2.0.txt</file>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer">
+                			</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+							<addHeader>false</addHeader>
 						</transformer>
 					</transformers>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
@@ -172,10 +188,12 @@
 		<dependency>
 			<groupId>org.xmlunit</groupId>
 			<artifactId>xmlunit-core</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
