--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<main.basedir>${project.basedir}</main.basedir>
 	</properties>
 
 	<dependencyManagement>
