--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -10,6 +10,7 @@
 	<name>JGraphT - Core</name>
 	<properties>
 		<main.basedir>${project.parent.basedir}</main.basedir>
+		<excludedGroups>org.jgrapht.SlowTests,org.jgrapht.OptionalTests</excludedGroups>
 	</properties>
 	<licenses>
 		<license>
@@ -69,8 +70,7 @@
 							<excludes>
 								<exclude>**/perf/**</exclude>
 							</excludes>
-							<excludedGroups>org.jgrapht.SlowTests</excludedGroups>
-							<excludedGroups>org.jgrapht.OptionalTests</excludedGroups>
+							<excludedGroups>${excludedGroups}</excludedGroups>
 						</configuration>
 					</execution>
 				</executions>
