Attempt a fix for Travis conditional commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_install:
   - npm install -g hercule
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn verify -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
-  - test $TRAVIS_BRANCH = "master" && etc/prepareDocs.sh
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then etc/prepareDocs.sh; fi
 after_success:
-  - test $TRAVIS_BRANCH = "master" && mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml; fi
 deploy:
   provider: pages
   skip-cleanup: true
