--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ out/*
 **/bin/*
 pom.xml.releaseBackup
 **/pom.xml.releaseBackup
+**/dependency-reduced-pom.xml
 .classpath
 docs/javadoc*
 docs/_site
