Added Warnsdorff rule heuristic and Parberry's algorithm for closed knight's tour problem. (#548)
* Added Warnsdorff rule heuristic and Parberry's algorithm for closed knight's tour problem.

--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -51,5 +51,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jgrapht-ext</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
